fixed layout issues

--- a/collect-webapp/frontend/src/common/components/DataGrid/DataGrid.scss
+++ b/collect-webapp/frontend/src/common/components/DataGrid/DataGrid.scss
@@ -4,7 +4,3 @@
   flex-direction: column;
   width: 100%;
 }
-
-.MuiDataGrid-columnHeaders {
-  position: relative !important;
-}
