--- a/collect-webapp/frontend/src/datamanagement/components/RecordDataTable.scss
+++ b/collect-webapp/frontend/src/datamanagement/components/RecordDataTable.scss
@@ -1,5 +1,5 @@
 .data-grid.records-data-grid {
-  height: 400px;
+  height: 100%;
 
   .owner-header {
     display: flex;
